# RusPipe

./: .rustpipe.db  .rustpipe.yml  Cargo.toml  INSTALL.md  MILESTONES.md  README.md  build.rs  demo.yml
.github/workflows/: ci.yml
assets/: index.html
migrations/: 0001_init.sql  0002_pipeline_hashes.sql
milestones/: M1-DONE.md  M10-DONE.md  M11-DONE.md  M12-DONE.md  M13-DONE.md  M14-DONE.md  M15-DONE.md  M16-DONE.md  M17-DONE.md  M18-DONE.md  M2-DONE.md  M3-DONE.md  M4-DONE.md  M5-DONE.md  M6-DONE.md  M7-DONE.md  M8-DONE.md  M9-DONE.md
proto/: runner.proto
rustpipe-macros/: Cargo.toml
rustpipe-macros/src/: lib.rs
src/: error.rs  lib.rs  main.rs
src/agent/: agent.rs  mod.rs  registry.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/db/: mod.rs
src/metrics/: mod.rs
src/notify/: mod.rs
src/pipeline/: dag.rs  dsl.rs  mod.rs  model.rs  validator.rs
src/runner/: container.rs  matrix.rs  mod.rs  parallel.rs  shell.rs
src/secrets/: mod.rs
src/server/: api.rs  dashboard.rs  github.rs  mod.rs  rbac.rs  tls.rs  webhook.rs
tests/: integration.rs
