[workspace]
members = [".", "rustpipe-macros"]
resolver = "2"

[package]
name = "rustpipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustpipe"
path = "src/main.rs"

[lib]
name = "rustpipe"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
colored = "2"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
futures-util = "0.3"
petgraph = "0.6"
rayon = "1"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["native-tokio", "http1"] }
tower-service = "0.3"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = "0.13"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rust-embed = { version = "8", features = ["axum"] }
tokio-tungstenite = "0.24"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
memmap2 = "0.9"
# M9
rustpipe-macros = { path = "rustpipe-macros" }
# M10
reqwest = { version = "0.12", features = ["json"] }
# M12
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
libc = "0.2"
async-stream = "0.3"
# M13
prometheus = "0.13"
statrs = "0.17"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
# M15
nom = "7"

[build-dependencies]
tonic-build = "0.12"
